docs/versioned_docs/version-0.19/index.mdx
---
title: "Overview"
description: "Dagger is a platform for automating software delivery. It can build, test, and ship any codebase, reliably and at scale."
slug: "/"
---

# What is Dagger?

Dagger is a platform for automating software delivery. It can build, test and ship any codebase, reliably and at scale.

Dagger runs locally, in your CI server, or directly in the cloud. 

## Why Dagger?

Dagger makes your software delivery *programmable*, *local-first*, *repeatable* and *observable*.

**Programmable**. Shell scripts and proprietary YAML are no longer acceptable for automating software delivery. Dagger provides: a complete execution engine and system API; SDKs for 8 languages; an interactive REPL; a rich ecosystem of reusable modules; and more.

**Local-first**. Once you automate a task with Dagger, it will reliably run on any supported system: your laptop, AI sandbox, CI server, or dedicated cloud infrastructure. The only dependency is a container runtime like Docker.

**Repeatable**. Tools run in containers, orchestrated by sandboxed functions. Host dependencies are explicit and strictly typed. Intermediate artifacts are built just-in-time. Every operation is incremental by default, with advanced cache control. Whether it's a test report, a build or a deployment, Dagger gives you an output you can trust.

**Observable**. Every operation emits a full OpenTelemetry trace, enriched by granular logs and metrics. Visualize the trace in directly in the terminal, or in a web view. Debug complex workflows immediately instead of guessing what went wrong from a wall of text logs.

## Features

**System API**. A cross-language API for orchestrating containers, filesystems, secrets, git repositories, network tunnels, and more. Every operation is typed and composable.

**SDKs in 8 languages**. Native SDKs for Go, Python, TypeScript, PHP, Java, .NET, Elixir and Rust. Each SDK is generated from the API schema, so you get idiomatic code with full type safety and editor support.

**Toolchains**. Install and use pre-built modules for common tools like linters, formatters, and test runners. No code required - just `dagger toolchain install` and start using validated, reusable automation.

**Typed artifacts**. Define custom object types with encapsulated state and functions. Types are content-addressed and can be passed across SDK language boundaries and module boundaries without serialization.

**Incremental execution**. Every operation is keyed by its inputs. Change one file and only the affected operations re-run. Caching is content-addressed and works automatically across local runs and CI.

**Runs anywhere**. The only requirement is a Linux container runtime. Runs natively on Linux, or via Docker Desktop and similar products on macOS and Windows. Local and CI behavior are identical.

**Built-in tracing**. Every operation emits OpenTelemetry spans. The CLI includes a live TUI; traces can also be exported to Jaeger, Honeycomb, or any OTel-compatible backend.


## Get started

- [Installation →](./getting-started/installation.mdx) Install Dagger and set up your development environment
- [Core Concepts →](/0.19/core-concepts) Understand toolchains, checks, and functions
- [Use a Toolchain →](./getting-started/quickstarts/blueprint/index.mdx) Get started without writing code
- [CI Quickstart →](./getting-started/quickstarts/ci/index.mdx) Build your first workflow

## Dagger platform

Dagger consists of a number of components, all of which work together in an integrated fashion to provide a framework to build and run composable workflows.

### Types

Types are the basic building blocks - such as containers, directories, files, and LLMs - that hold data (state) and offer operations (methods) you can link together. Each operation on a type runs inside a container, ensuring consistent, isolated execution.

[**Learn more about types →**](./getting-started/types/index.mdx)

### Functions

Dagger Functions are individual units of computation that perform a specific task by combining operations on types with custom logic. Dagger Functions are written in a programming language using a type-safe Dagger SDK, and packaged and shared in Dagger modules.

[**Learn more about Dagger Functions →**](./extending/modules/functions.mdx)

### Modules

Dagger Functions are packaged, shared and reused using Dagger modules.

When a Dagger module is loaded into a Dagger session, the Dagger API is dynamically extended with new functions served by that module. So, after loading a Dagger module, an API client can now call all of the original core functions plus the new functions provided by that module.

[**Learn more about Dagger modules →**](./introduction/features/reusability.mdx)

### Core Concepts

Start here to understand the fundamentals of working with Dagger:

- **[Toolchains](/0.19/core-concepts/toolchains)** - Install and use modules without writing code
- **[Checks](/0.19/core-concepts/checks)** - Validate commits with automated quality, security, and standards checks
- **[Functions](/0.19/core-concepts/functions)** - Building blocks of Dagger workflows

[**Learn core concepts →**](/0.19/core-concepts)

### Key Features

Dagger provides powerful features to build, validate, and manage your workflows:

- **[Programmable workflows](./introduction/features/programmability.mdx)** - Write pipelines in code, not YAML
- **[Automatic caching](./introduction/features/caching.mdx)** - Speed up execution with intelligent caching
- **[LLM integration](./introduction/features/llm.mdx)** - Build AI agents with native LLM support

[**Explore all features →**](./introduction/features/index.mdx)

### CLI

The Dagger CLI is your primary entrypoint to Dagger. It is a full-featured, easy to use tool that can be used interactively from a terminal or non-interactively from a shell script or a CI runner. The Dagger CLI also includes a real-time visualization feature called the terminal UI (TUI).

The Dagger CLI acts as a client to the Dagger Engine. It can automatically provision a Dagger Engine if needed.

[**Learn more about the Dagger CLI →**](./reference/cli/index.mdx)

### Engine and API

The Dagger Engine is the core runtime powering the Dagger platform. It combines an execution engine, universal type system, data layer and module system. It can run on any OCI-compatible system, and is controlled by the Dagger API.

The Dagger API is a unified interface for programming the Dagger Engine. It defines a universal type system based on GraphQL, which can be introspected by any client, and dynamically extended by specially crafted servers. The core features of the Dagger Engine - execution engine, data layer - are available as builtin types.

[**Learn more about the Dagger API →**](./getting-started/api.mdx)

### SDKs

Dagger SDKs provide resources for developing Dagger modules using a familiar language and toolchain. Each SDK provides:

1. A *client generator*, to *consume* the Dagger API with native code.
2. A *server generator*, to *extend* the Dagger API with native code.
3. Examples and reference documentation

[**Learn more about Dagger SDKs →**](./getting-started/api/clients-sdk.mdx)

### Dagger Cloud

[Dagger Cloud](https://dagger.cloud) complements Dagger with a production-grade control plane. Features of Dagger Cloud include workflow visualization and operational insights. Dagger Cloud provides a web interface to visualize each step of your workflow, drill down to detailed logs, understand how long operations took to run, and whether operations were cached.

Dagger Cloud also collects telemetry from all your organization's Dagger Engines, whether they run in development or CI, and presents it all to you in one place. This gives you a unique view on all workflows, both pre-push and post-push.

[**Learn more about Dagger Cloud →**](https://dagger.cloud)

### Daggerverse

The [Daggerverse](https://daggerverse.dev) is a free service run by Dagger, which indexes all publicly available Dagger modules, and lets you easily search and consume them.

You can use the Daggerverse to find reusable modules, share your own modules, and discover new ways to use Dagger.

[**Learn more about the Daggerverse →**](https://daggerverse.dev)

## Community and support

- [**Community**](https://dagger.io/community) - Explore the Dagger community and join upcoming events
- [**Daggerverse**](https://daggerverse.dev) - Find modules in our community module registry
- [**Discord**](https://discord.gg/dagger-io) - Get help and share ideas
- [**YouTube**](https://www.youtube.com/@dagger-io) - Learn about Dagger through videos, community demos, and livestreams
- [**GitHub**](https://github.com/dagger/dagger) - Contribute to Dagger's open source repository
